# CUDA

./: CMakeLists.txt  README.md
kernels/cuda/: laplace_solver.cuh  matrix_add.cuh  matrix_multiply.cuh
kernels/opencl/: laplace_solver.cl  matrix_add.cl  matrix_multiply.cl
results/: Parallel_Computing_Assignment_Report.docx  report.md
src/laplace_solver/: laplace_solver.hpp
src/matrix_addition/: CMakeLists.txt  main.cpp  matrix_addition.cpp  matrix_addition.hpp
src/matrix_multiplication/: CMakeLists.txt  main.cpp  matrix_multiplication.cpp  matrix_multiplication.hpp
src/utils/: CMakeLists.txt  timer.hpp
